# apple-mail-pz-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP_PLAYBOOK.md  Makefile  README.md  SECURITY.md  hatch_build.py  pyproject.toml  release_artifact_waivers.txt
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: dependency-audit.yml  release-hygiene.yml  release.yml  test.yml
docs/: SECURITY.md
docs/guides/: CLIENT_SERVER_PARITY.md  COMPLEXITY.md  DEVELOPMENT.md  SECURITY_CHECKLIST.md  THREAT_MODEL.md
docs/plans/: 2026-05-22-issue-213-threat-model-design.md  2026-05-22-issue-213-threat-model.md
docs/reference/: ARCHITECTURE.md  TOOLS.md
docs/research/: imap-auth-options-decision.md  imap-hybrid-approach.md  imap-thread-strategies.md
evals/: schema_budget.json
evals/agent_tool_usability/: README.md  fake_mail.py  run_eval.py  task_eval.py  tasks.py  tool_descriptions.md
mcpb/: manifest.json
scripts/: benchmark_local_db_search.py  build-mcpb.sh  check_client_server_parity.sh  check_complexity.sh  check_readme_claims.sh  check_version_sync.sh  schema_budget.py
src/apple_mail_fast_mcp/: __init__.py  cli.py  imap_connector.py  imap_providers.py  keychain.py  local_db_connector.py  mail_connector.py  security.py  server.py  utils.py  version.py
src/apple_mail_mcp/: cli.py  draft_builder.py  drafts.py  exceptions.py  imap_connector.py  keychain.py  mail_connector.py  security.py  server.py  utils.py
tests/benchmarks/: conftest.py  test_bulk_ops.py  test_imap_pool.py
tests/e2e/: test_mcp_tools.py  test_stdio_transport.py
tests/integration/: test_mail_integration.py
tests/unit/: test_attachments.py  test_cli.py  test_draft_builder.py  test_drafts.py  test_eval_keychain.py  test_hatch_build.py  test_imap_connector.py  test_imap_pool.py  test_imap_providers.py  test_local_db_connector.py  test_mail_connector.py  test_schema_budget.py  test_security.py  test_server.py  test_server_annotations.py  test_task_eval.py  test_utils.py  test_version.py
