[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apple-mail-pz-mcp"
version = "0.11.0"
description = "MCP server for Apple Mail, tuned for LLM efficiency. Continues apple-mail-fast-mcp by Morgan Jeffries (MIT)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
# Morgan Jeffries authored apple-mail-fast-mcp, from which this project
# continues. The placeholder address the upstream metadata carried is omitted
# rather than guessed at.
authors = [
    {name = "Morgan Jeffries"},
    {name = "Wylie Swanson", email = "wylie@pingzero.net"},
]
maintainers = [
    {name = "Wylie Swanson", email = "wylie@pingzero.net"},
]
keywords = ["mcp", "apple-mail", "email", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=3.3.1",
    "imapclient>=3.1.0",
]

# Dev dependencies live only in [dependency-groups] (PEP 735) — `uv sync --dev`,
# which every Makefile target and CI job uses, reads that. They were previously
# duplicated verbatim under [project.optional-dependencies], where the two lists
# could drift apart silently. The `research` extra pinned imapclient, which
# became a primary dependency when imap_connector.py stopped being a spike
# (docs/plans/2026-04-23-imap-connector-design.md).

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.100.0",
    "radon>=6.0.1",
    "pip-audit>=2.7.0",
    "ruff>=0.15.15",
    "mypy>=1.20.2",
]

[project.scripts]
apple-mail-pz-mcp = "apple_mail_fast_mcp.server:main"

[project.urls]
Homepage = "https://github.com/wylieswanson/apple-mail-pz-mcp"
Repository = "https://github.com/wylieswanson/apple-mail-pz-mcp"
Issues = "https://github.com/wylieswanson/apple-mail-pz-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mail_fast_mcp"]

# Freezes the git commit into _build_info.py so `--version` still knows the
# provenance after `uv tool install`, where no .git survives. See hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark test as an async test",
    "integration: mark test as integration test (requires --run-integration)",
    "e2e: mark test as end-to-end test (full MCP stack)",
    "benchmark: mark test as performance benchmark",
    "slow: mark test as slow-running",
    "real_account_fallback: opt out of the conftest stub of _alternative_account_identifier (for tests that exercise the real name<->UUID Keychain fallback)",
]

[tool.coverage.run]
source = ["apple_mail_fast_mcp"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["imapclient", "imapclient.*"]
ignore_missing_imports = true
